--- a/_meetings/2017-07-13-Redmond.md
+++ b/_meetings/2017-07-13-Redmond.md
@@ -11,6 +11,57 @@ Homomorphic encryption schemes which can handle one “operation” have been kn
 
 This workshop aimed to leverage this progress and to galvanize the community toward a common approach to standardization of Homomorphic Encryption.
 
+## Agenda
+
+### Day 1 – July 13, 2017
+
+| Time (PDT)        | Session                                                                                                                                                                        | Description                                                                                                                                                          |
+|-------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| 8:30 AM–9:00 AM   | Breakfast                                                                                                                                                                      |                                                                                                                                                                      |
+| 9:00 AM–9:15 AM   | Kickoff, Kristin Lauter                                                                                                                                                        | Goals and structure: everyone involved in brainstorming progressing toward writing white papers that consolidate ideas, future research, standardization next steps. |
+| 9:15 AM–10:15 AM  | Intro lightning round: What I’m working on and what I’m excited to work on (two minutes/one slide).                                                                            | One PowerPoint slide describing who you are and what you are working on.                                                                                             |
+| 10:15 AM–10:30 AM | Break                                                                                                                                                                          |                                                                                                                                                                      |
+| 10:30 AM–12:00 PM | Part 1: The State of the Art: A snapshot of the capabilities of today’s tools. 10-15 minutes with time for discussion. Leading into the issues related to workshop objectives. | Demos of what HE can currently do                                                                                                                                    |
+|                   |                                                                                                                                                                                | • SEAL: Kim Laine                                                                                                                                                    |
+|                   |                                                                                                                                                                                | • NFLlib: Pascal Pallier                                                                                                                                             |
+|                   |                                                                                                                                                                                | • Palisade: Yuriy Polyakov                                                                                                                                           |
+|                   |                                                                                                                                                                                | • cuHE: Berk Sunar                                                                                                                                                   |
+|                   |                                                                                                                                                                                | • Frontend for FHE: Alex Malozemoff                                                                                                                                  |
+|                   |                                                                                                                                                                                | • HElib: Shai Halevi                                                                                                                                                 |
+| 12:00 PM–1:00 PM  | Working Lunch                                                                                                                                                                  | Lily & Pascal – the path toward standardization; overview of standardization process                                                                                 |
+| 1:00 PM–1:30 PM   | Introduction of the three tracks                                                                                                                                               | Facilitators each spend 10 minutes describing tracks and participants organize into tracks                                                                           |
+|                   | • Security                                                                                                                                                                     |                                                                                                                                                                      |
+|                   | • Apps                                                                                                                                                                         |                                                                                                                                                                      |
+|                   | • API                                                                                                                                                                          |                                                                                                                                                                      |
+| 1:30 PM–2:30 PM   | Facilitated Breakout Groups:                                                                                                                                                   | • Kristin and Vinod: Security track                                                                                                                                  |
+|                   | Three groups loosely organized around the objectives                                                                                                                           | • Rani and Jung Hee: Apps track                                                                                                                                      |
+|                   |                                                                                                                                                                                | • Kurt and Kim: API track                                                                                                                                            |
+| 2:30 PM–2:45 PM   | Break                                                                                                                                                                          |                                                                                                                                                                      |
+| 2:45 PM–4:30 PM   | Facilitated Breakout Groups:                                                                                                                                                   | • Kristin and Vinod: Security track                                                                                                                                  |
+|                   | Moving into more specificity for a path toward standardization                                                                                                                 | • Rani and Jung Hee: Apps track                                                                                                                                      |
+|                   |                                                                                                                                                                                | • Kurt and Kim: API track                                                                                                                                            |
+| 4:30 PM–5:00 PM   | Day 1 wrap up: Groups report back                                                                                                                                              | What we saw and heard and a bit about tomorrow                                                                                                                       |
+| 5:00 PM–8:00 PM   | Wine, cheese, dinner                                                                                                                                                           | Purple Café and Wine Bar  
+
+
+### Day 2 – July 14, 2017
+
+| Time (PDT)        | Session                                         | Description                                           |
+|-------------------|-------------------------------------------------|-------------------------------------------------------|
+| 8:30 AM–9:00 AM   | Breakfast                                       |                                                       |
+| 9:00 AM–9:15 AM   | Expectations of the Day, Co-Chair               | By the end of the day, we will have accomplished      |
+| 9:15 AM–10:30 AM  | Outlines of a White Paper in groups             | • Kristin and Vinod: Security track                   |
+|                   |                                                 | • Rani and Jung Hee: Apps track                       |
+|                   |                                                 | • Kurt and Kim: API track                             |
+| 10:45 AM–12:00 PM | Continue drafting outlines for White Papers     | Breakout groups working together                      |
+| 12:00 PM–1:00 PM  | Working Lunch                                   | Lily and Pascal follow up discussion                  |
+| 1:00 PM–3:00 PM   | White Papers: Moving from outline to text       | Writing!                                              |
+| 3:00 PM–3:15 PM   | Break                                           |                                                       |
+| 3:15 PM–4:00 PM   | Each group develops go-forward plans            | What must happen next to make standardization happen. |
+| 4:00 PM–5:00 PM   | What’s missing & next steps for standardization | How do you want to be engaged going forward?          |
+| 5:00 PM–5:30 PM   | Close and Next Steps, Co-Chairs                 | What happens over the next 6, 12, 18 months           |
+
+
 ## Organizers
 - Kristin Lauter, Microsoft Research
 - Kim Laine, Microsoft Research
