fix date at the top

--- a/_meetings/2017-07-13-Redmond.md
+++ b/_meetings/2017-07-13-Redmond.md
@@ -3,7 +3,7 @@ title: "[1] Redmond"
 date: 2017-07-13T15:14:54+02:00
 ---
 
-The first meeting was held on 13 July 2017 at Microsoft Research.
+The first meeting was held on 13-14 July 2017 at Microsoft Research.
 
 This workshop brought together members of the Homomorphic Encryption (HE) community to spend two days working together toward a plan for standardization.
 
