add info toronto

--- a/_meetings/2018-08-20-Toronto.md
+++ b/_meetings/2018-08-20-Toronto.md
@@ -3,4 +3,58 @@ title: "[3] Toronto"
 date: 2018-08-20T15:15:34+02:00
 ---
 
+The third meeting as held 20 October 2018 in Toronto.
+
+Based on the success of our second standards meeting last March, and the founding of the HomomorphicEncryption.org industry consortium, we are pleased to announce the third edition of our standards meeting. The goal of this meeting is to advance the API standards for homomorphic encryption based on our initial API standard draft. We welcome new participants who wish to be a part of this homomorphic encryption standards community. This includes academics and researchers, as well as representatives from industry, government, and nonprofits from around the world.
+
+The Third Standardization Workshop will be held in Toronto, Canada on October 20, 2018. Attendees are invited and encouraged to join a kick off dinner reception on October 19.
+
+Please also consider attending prior to this workshop, the 25th ACM Conference on Computer Communications. (Requires external registration)
+
+
+## Location
+
+The Saturday October 20th Workshop will be located in Room SF1105, Sanford Fleming Building, University of Toronto, 10 King's College Road.
+
+The Friday October 19th dinner will be located at the University of Toronto Faculty Club, located at 41 Willcocks Street.
+
+For more detailed directions, see here.
+
+## Workshop Goals
+The workshop has two main goals: (1) Build upon the API discussion from the second workshop; (2) outline steps forward and see Draft Agenda for more details.
+
+Download the homomorphic encryption API standard here.
+
+Download the homomorphic encryption draft standard for parameter selection here.
+
+Co-sign the homomorphic encryption draft standard for parameter selection here.
+
+## Organization
+
+### Local Organizer
+- Glenn Gulak (UofT)
+
+### Organizing Committee
+- Jung Hee Cheon (SNU)
+- Kim Laine (Microsoft Research)
+- Kristin Lauter (Microsoft Research)
+- Kurt Rohloff (NJIT)
+- Vinod Vaikuntanathan (MIT)
+- Yuriy Polyakov (NJIT)
+- Roy Zimmermann (Microsoft Research)
+- Glenn Gulak (UofT)
+
+## Contact
+If you have any questions, please contact the organizing committee at fhe2018@ece.utoronto.ca.
+
+As this will be an interactive workshop, we will try to have opportunities for participants to share information that is relevant and appropriate to the goal of approving an API standard for homomorphic encryption. 
+Please send us an email if you have something you would like to propose to present at the workshop.
+
+## Sponsorship
+This meeting is currently being generously supported by:
+- Microsoft
+- University of Toronto
+- MIT
+- Duality Technologies
+- NJIT
 
