add toronto agenda

--- a/_meetings/2018-08-20-Toronto.md
+++ b/_meetings/2018-08-20-Toronto.md
@@ -29,6 +29,47 @@ Download the homomorphic encryption draft standard for parameter selection here.
 
 Co-sign the homomorphic encryption draft standard for parameter selection here.
 
+## Agenda
+
+### Day 1: Meet and Greet (Friday, October 19)
+
+| time      | Activity                                               |
+|-----------|--------------------------------------------------------|
+| 5:30-6:30 | Evening Reception (University of Toronto Faculty Club) |
+| 6:30-9:30 | Dinner (University of Toronto Faculty Club)            |
+
+### Day 2: Focus on API, Applications and Future Directions (Saturday, October 20)
+
+| time        | Activity                                                                                         |
+|-------------|--------------------------------------------------------------------------------------------------|
+| 8:00-9:00   | Registration and Networking Breakfast (SF1105 Foyer)                                             |
+| 9:00-9:15   | Intro and welcome – Glenn Gulak (U. Toronto), Kim Laine (MSR)                                    |
+| 9:15-10:00  | Look back at security standard – Kristin Lauter (MSR)                                            |
+| 10:00-10:45 | Flash Talks & Announcements – 10-15 minutes each                                                 |
+|             | CSE and Canada’s Cyber Centre - John Proos (CSE)                                                 |
+|             | Update from NIST – Daniel Apon (NIST)                                                            |
+|             | Update from NSF - Andrew Pollington (NSF)                                                        |
+|             | Summary of WAHC - Michael Brenner (U Hannover)                                                   |
+| 10:45-11:00 | Break                                                                                            |
+| 11:00-12:00 | Panel: Application Case Studies moderated by JungHee Cheon (SNU/Samsung)                         |
+|             | Sreekanth Kannepalli (Microsoft)                                                                 |
+|             | Juan Ramon Troncoso-Pastoriza (EPFL)                                                             |
+|             | Axel Schroepfer (SAP)                                                                            |
+|             | Casimir Wierzynski (Intel)                                                                       |
+|             | Jihoon Cho (Samsung)                                                                             |
+| 12:00-13:00 | Lunch                                                                                            |
+| 13:00-15:00 | Panel: API Standard moderated by Shai Halevi (IBM)                                               |
+|             | Motivation – Kurt Rohloff (NJIT) (10 min)                                                        |
+|             | Presentation: Initial Explorations – Yuriy Polyakov (NJIT), Kim Laine (MSR) (50 min)             |
+| 15:00-15:30 | Break                                                                                            |
+| 15:30-15:45 | Library interoperability - Jerry Ryan (NJIT)                                                     |
+| 15:45-16:00 | Presentation of iDASH HE Track Results by Yongsoo Song                                           |
+| 16:00-16:45 | Rump Session                                                                                     |
+|             | Open invitation to posters participants, iDash participants, FHE users, Compiler Developers, etc |
+| 16:45-17:30 | Closing Remarks/Next Steps                                                                       |
+
+
+
 ## Organization
 
 ### Local Organizer
