--- a/_meetings/2018-08-20-Toronto.md
+++ b/_meetings/2018-08-20-Toronto.md
@@ -3,7 +3,7 @@ title: "[3] Toronto"
 date: 2018-08-20T15:15:34+02:00
 ---
 
-The third meeting as held 20 October 2018 in Toronto.
+The third meeting was held 20 October 2018 in Toronto.
 
 Based on the success of our second standards meeting last March, and the founding of the HomomorphicEncryption.org industry consortium, we are pleased to announce the third edition of our standards meeting. The goal of this meeting is to advance the API standards for homomorphic encryption based on our initial API standard draft. We welcome new participants who wish to be a part of this homomorphic encryption standards community. This includes academics and researchers, as well as representatives from industry, government, and nonprofits from around the world.
 
