--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -32,7 +32,7 @@ Organizing Committee.  Juan R. Troncoso-Pastoriza (Tune Insight SA), Mariya Geor
 Kristin Lauter (Facebook), Vinod Vaikuntanathan (MIT/Duality Technologies), Kim Laine (Microsoft), Kurt Rohloff (NJIT/Duality Technologies), Jung Hee Cheon (Seoul National University/CryptoLab), Shai Halevi (Algorand Foundation), Lily Chen (observer, NIST).
 
 ## Presentations
-The presentations are available on the ITU website: https://www.itu.int/en/ITU-T/Workshops-and-Seminars/2022/0901/Pages/programme.aspx
+The presentations are available on the ITU website: <https://www.itu.int/en/ITU-T/Workshops-and-Seminars/2022/0901/Pages/programme.aspx>
 
 ## Agenda
 
